--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
+<!-- Daniel Richard-->
+<!--SOURCES CITED:    https://www.w3schools.com/-->
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>This is a title</title>
   </head>
-  <body>
-    <!-- Body content goes here -->
-  </body>
+  <header> This is a header </header>
+  <h1> This is example of h1 tag </h1>
+  <p> This is an example of a paragraph tag</p>
+  <ol>
+  	<li>first item in ol</li>
+  	<li>second item in ol</li>
+
+</ol>
+ <table>
+  <tr>
+    <th>Price</th>
+    <th>Item</th>
+  </tr>
+  <tr>
+    <td>iPhone</td>
+    <td>$1000</td>
+
+  </tr>
+  <tr>
+  	<td>Galaxy S 8</td>
+  	<td>$700</td>
+  </tr>
+</table> 
+<p>        </p>
+
+ <a href="https://www.google.com">google</a> 
+  
+
+  <footer> This is a footer</footer>
+
+<img src="few.jpg" >
+
+
 </html>
