--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <title>This is a title</title>
   </head>
   <header> This is a header </header>
+
   <h1> This is example of h1 tag </h1>
+
   <p> This is an example of a paragraph tag</p>
+
   <ol>
   	<li>first item in ol</li>
   	<li>second item in ol</li>
-
 </ol>
+
  <table>
   <tr>
     <th>Price</th>
@@ -23,21 +26,23 @@
   <tr>
     <td>iPhone</td>
     <td>$1000</td>
-
   </tr>
   <tr>
   	<td>Galaxy S 8</td>
   	<td>$700</td>
   </tr>
 </table> 
-<p>        </p>
+
+
+<p>  <!-- Spacing-->      </p> 
 
  <a href="https://www.google.com">google</a> 
   
 
-  <footer> This is a footer</footer>
+
 
 <img src="few.jpg" >
+  <footer> This is a footer</footer>
 
 
 </html>
