--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
-<!-- Daniel Richard-->
-<!--SOURCES CITED:    https://www.w3schools.com/-->
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>This is a title</title>
+    <title>THIS IS MY HEADER</title>
+    <link rel="sytlesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
+    </style>
   </head>
-  <header> This is a header </header>
-
-  <h1> This is example of h1 tag </h1>
-
-  <p> This is an example of a paragraph tag</p>
-
-  <ol>
-  	<li>first item in ol</li>
-  	<li>second item in ol</li>
-</ol>
-
- <table>
-  <tr>
-    <th>Price</th>
-    <th>Item</th>
-  </tr>
-  <tr>
-    <td>iPhone</td>
-    <td>$1000</td>
-  </tr>
-  <tr>
-  	<td>Galaxy S 8</td>
-  	<td>$700</td>
-  </tr>
-</table> 
-
-
-<p>  <!-- Spacing-->      </p> 
-
- <a href="https://www.google.com">google</a> 
   
+  <div >
+
+  <a href="https://www.google.com/html/"> home </a>
+  <a href="https://www.bing.com/html/"> name </a>
+  <a href="https://www.duckduckgo.com/html/"> news </a>
+  </div>
+  
+  <h1> THIS IS MY HEADER</h1>
+
+
+  
+  <div class="flex-container">
+  	<div>
+  <h2> ABOUT ME</h2>
+  <p>
+    Blah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blah
+</p>
+<p>
+    Blah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blah
+  </p>
+  </div>
+</div>
+
+
+  <img src="350x250.png">
+  <img src="250x350.png">
+
+  <a href="blah.com"> button </a>
 
 
 
-<img src="few.jpg" >
-  <footer> This is a footer</footer>
 
+
+  <footer> copyright 2018 </footer>
 
 </html>
