--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   
-  <div >
+  <div class="flex-container3">
 
   <a href="https://www.google.com/html/"> home </a>
   <a href="https://www.bing.com/html/"> name </a>
@@ -22,7 +22,7 @@
   
   <div class="flex-container">
   	<div>
-  <h2> ABOUT ME</h2>
+  <h3> ABOUT ME</h2>
   <p>
     Blah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blah
 </p>
@@ -33,15 +33,24 @@
 </div>
 
 
+
+<div >
+	<div>
   <img src="350x250.png">
   <img src="250x350.png">
+	</div>
+</div>
+
+<div class="flex-container4">
 
   <a href="blah.com"> button </a>
 
+</div>
 
 
+<div class="flex-container6">
+  <footer> 
 
-
-  <footer> copyright 2018 </footer>
+  copyright 2018 </footer></div>
 
 </html>
