--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
+
+
 <html>
+<div>
+
   <head>
+
     <meta charset="utf-8">
     <title>THIS IS MY HEADER</title>
     <link rel="sytlesheet" type="text/css" href="reset.css">
@@ -22,7 +27,7 @@
   
   <div class="flex-container">
   	<div>
-  <h3> ABOUT ME</h2>
+  <h3> ABOUT ME</h3>
   <p>
     Blah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blah
 </p>
@@ -52,5 +57,5 @@
   <footer> 
 
   copyright 2018 </footer></div>
-
+</div>
 </html>
