--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   
   <div class="flex-container">
+  	   
   	<div>
   <h3> ABOUT ME</h3>
   <p>
@@ -44,6 +45,22 @@
   <img src="350x250.png">
   <img src="250x350.png">
 	</div>
+</div>
+
+<p>
+	new flexbox starts below </p>
+<div class="flex-container7">
+	<img src="350x250.png">
+	<img src="350x250.png">
+	<img src="350x250.png">
+	<img src="350x250.png">
+	<img src="350x250.png">
+	<img src="350x250.png">
+	<img src="350x250.png">
+	<img src="350x250.png">
+	<img src="350x250.png">
+	<img src="350x250.png">
+
 </div>
 
 <div class="flex-container4">
