--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <div>
 
   <head>
-
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta charset="utf-8">
     <title>THIS IS MY HEADER</title>
     <link rel="sytlesheet" type="text/css" href="reset.css">
@@ -17,8 +18,13 @@
   <div class="flex-container3">
 
   <a href="https://www.google.com/html/"> home </a>
-  <a href="https://www.bing.com/html/"> name </a>
-  <a href="https://www.duckduckgo.com/html/"> news </a>
+  <a href="https://www.bing.com/html/"> about </a>
+  <a href="https://www.duckduckgo.com/html/"> contact </a>
+  <div style="font-size:3em; color:red;  background-color:000000; position: relative;
+    left: 30px;">
+      <i class="fas fa-golf-ball"></i>
+  </div>
+  
   </div>
   
   <h1> THIS IS MY HEADER</h1>
@@ -32,9 +38,7 @@
   <p>
     Blah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blah
 </p>
-<p>
-    Blah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blah
-  </p>
+
   </div>
 </div>
 
