--- a/index.html
+++ b/index.html
@@ -20,63 +20,85 @@
   <a href="https://www.google.com/html/"> home </a>
   <a href="https://www.bing.com/html/"> about </a>
   <a href="https://www.duckduckgo.com/html/"> contact </a>
-  <div style="font-size:3em; color:red;  background-color:000000; position: relative;
+
+
+  <div style="background-color:#000000; align-content:center;"">
+
+  <div style="font-size:3em; color:red;  background-color:#000000; position: relative;
+
     left: 30px;">
       <i class="fas fa-golf-ball"></i>
+    </div>
   </div>
   
   </div>
   
+
+<div class= "container5" >
+
   <h1> THIS IS MY HEADER</h1>
 
-
-  
-  <div class="flex-container">
-  	   
-  	<div>
-  <h3> ABOUT ME</h3>
   <p>
     Blah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blah
 </p>
 
+
+<div style="margin-left: auto; margin-right: auto;  align-content: center; text-align: center;">
+
+<a style="width:100px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
+  href="https://www.google.com/html/"> Enter Site </a>
+</div>
   </div>
-</div>
 
 
-
-<div >
-	<div>
-  <img src="350x250.png">
-  <img src="250x350.png">
-	</div>
-</div>
-
-<p>
-	new flexbox starts below </p>
 <div class="flex-container7">
-	<img src="350x250.png">
-	<img src="350x250.png">
-	<img src="350x250.png">
-	<img src="350x250.png">
-	<img src="350x250.png">
-	<img src="350x250.png">
-	<img src="350x250.png">
-	<img src="350x250.png">
-	<img src="350x250.png">
-	<img src="350x250.png">
+<div class="flex-container6">
+  <div style="text-align: center">
 
+    <img src="icon.png" style="width:100px; height:100px">
+
+  <p style="color: black; text-align: center; justify-content: center">
+    Blach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blah
+</p>
+
+<a style="width:75px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
+  href="https://www.google.com/html/"> View more </a>
+</div>
 </div>
 
-<div class="flex-container4">
+<div class="flex-container6">
+  <div style="text-align: center">
 
-  <a href="secondpage.html"> button </a>
+    <img src="icon.png" style="width:100px; height:100px">
 
+  <p style="color: black; text-align: center; justify-content: center">
+    Blach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blah
+</p>
+
+<a style="width:75px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
+  href="https://www.google.com/html/"> View more </a>
 </div>
+</div>
+
 
 
 <div class="flex-container6">
-  <footer> 
+  <div style="text-align: center">
 
-  copyright 2018 </footer></div>
+    <img src="icon.png" style="width:100px; height:100px">
+
+  <p style="color: black; text-align: center; justify-content: center">
+    Blach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blah
+</p>
+
+<a style="width:75px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
+  href="https://www.google.com/html/"> View more </a>
 </div>
+</div>
+</div>
+
+
+
+  
+
 </html>
