--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--couldnt figure out why the icon/text/view more part of the page is spaced apart so much-->
+
+
 <!DOCTYPE html>
 
 
@@ -8,7 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta charset="utf-8">
-    <title>THIS IS MY HEADER</title>
+    <title>Mobile Page</title>
     <link rel="sytlesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 
@@ -16,7 +19,7 @@
   </head>
   
   <div class="flex-container3">
-
+  
   <a href="https://www.google.com/html/"> home </a>
   <a href="https://www.bing.com/html/"> about </a>
   <a href="https://www.duckduckgo.com/html/"> contact </a>
@@ -24,7 +27,7 @@
 
   <div style="background-color:#000000; align-content:center;"">
 
-  <div style="font-size:3em; color:red;  background-color:#000000; position: relative;
+  <div style="font-size:3em; color:red;  background-color:#000000; position: relative; padding-left:25px;padding-right:15px;
 
     left: 30px;">
       <i class="fas fa-golf-ball"></i>
@@ -52,16 +55,18 @@
 
 
 <div class="flex-container7">
+
+
 <div class="flex-container6">
   <div style="text-align: center">
 
     <img src="icon.png" style="width:100px; height:100px">
 
-  <p style="color: black; text-align: center; justify-content: center">
-    Blach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blah
+  <p style="color: black; text-align: center; justify-content: center; ">
+    Blach blah blahBlach blah<br> blahBlach blah blahBlach blah <br>blahBlach blah blahBlach blah blah
 </p>
 
-<a style="width:75px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
+<a style="width:50px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
   href="https://www.google.com/html/"> View more </a>
 </div>
 </div>
@@ -72,10 +77,10 @@
     <img src="icon.png" style="width:100px; height:100px">
 
   <p style="color: black; text-align: center; justify-content: center">
-    Blach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blah
+    Blach blah blahBlach blah <br>blahBlach blah blahBlach blah <br>blahBlach blah blahBlach blah blah
 </p>
 
-<a style="width:75px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
+<a style="width:50px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
   href="https://www.google.com/html/"> View more </a>
 </div>
 </div>
@@ -88,10 +93,10 @@
     <img src="icon.png" style="width:100px; height:100px">
 
   <p style="color: black; text-align: center; justify-content: center">
-    Blach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blahBlach blah blah
+    Blach blah blahBlach blah<br> blahBlach blah blahBlach blah <br>blahBlach blah blahBlach blah blah
 </p>
 
-<a style="width:75px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
+<a style="width:50px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
   href="https://www.google.com/html/"> View more </a>
 </div>
 </div>
