--- a/index.html
+++ b/index.html
@@ -18,92 +18,46 @@
     </style>
   </head>
   
-  <div class="flex-container3">
+  <body>
+
+<form >
+  First name:<br>
+  <input type="text" name="firstname" >
+  <br>
   
-  <a href="https://www.google.com/html/"> home </a>
-  <a href="https://www.bing.com/html/"> about </a>
-  <a href="https://www.duckduckgo.com/html/"> contact </a>
-
-
-  <div style="background-color:#000000; align-content:center;"">
-
-  <div style="font-size:3em; color:red;  background-color:#000000; position: relative; padding-left:25px;padding-right:15px;
-
-    left: 30px;">
-      <i class="fas fa-golf-ball"></i>
-    </div>
-  </div>
+  Last name:<br>
+  <input type="text" name="lastname" >
+  <br>
+   EMAIL:<br>
+  <input type="email" name="email" >
+  <br>
   
-  </div>
+  <br>
+   About You:<br>
+  <input type="text" name="about" >
+  <br>
+  <br>
   
-
-<div class= "container5" >
-
-  <h1> THIS IS MY HEADER</h1>
-
-  <p>
-    Blah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blahBlah blah
-</p>
+</form> 
 
 
-<div style="margin-left: auto; margin-right: auto;  align-content: center; text-align: center;">
+ <form>
+  <input type="radio" name="type" value="Dog" checked> Male<br>
+  <input type="radio" name="type" value="Cat"> Female<br>
+  <input type="radio" name="type" value="Other"> Other
+</form> 
 
-<a style="width:100px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
-  href="https://www.google.com/html/"> Enter Site </a>
-</div>
-  </div>
-
-
-<div class="flex-container7">
-
-
-<div class="flex-container6">
-  <div style="text-align: center">
-
-    <img src="icon.png" style="width:100px; height:100px">
-
-  <p style="color: black; text-align: center; justify-content: center; ">
-    Blach blah blahBlach blah<br> blahBlach blah blahBlach blah <br>blahBlach blah blahBlach blah blah
-</p>
-
-<a style="width:50px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
-  href="https://www.google.com/html/"> View more </a>
-</div>
-</div>
-
-<div class="flex-container6">
-  <div style="text-align: center">
-
-    <img src="icon.png" style="width:100px; height:100px">
-
-  <p style="color: black; text-align: center; justify-content: center">
-    Blach blah blahBlach blah <br>blahBlach blah blahBlach blah <br>blahBlach blah blahBlach blah blah
-</p>
-
-<a style="width:50px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
-  href="https://www.google.com/html/"> View more </a>
-</div>
-</div>
+<select>
+  <option value="Spring">Spring</option>
+  <option value="Summer">Summer</option>
+  <option value="Fall">Fall</option>
+  <option value="Winter">Winter</option>
+</select>
 
 
 
-<div class="flex-container6">
-  <div style="text-align: center">
+<input type="submit" value="Submit">
 
-    <img src="icon.png" style="width:100px; height:100px">
-
-  <p style="color: black; text-align: center; justify-content: center">
-    Blach blah blahBlach blah<br> blahBlach blah blahBlach blah <br>blahBlach blah blahBlach blah blah
-</p>
-
-<a style="width:50px; border-color: black; border-width: 2px; border-style: solid; background-color: #9B9B9B; color: black; margin-bottom: 50px; align-self: center;"
-  href="https://www.google.com/html/"> View more </a>
-</div>
-</div>
-</div>
-
-
-
-  
+</body>
 
 </html>
