--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta charset="utf-8">
-    <title>Mobile Page</title>
+    <title>About Me</title>
     <link rel="sytlesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 
@@ -19,6 +19,19 @@
   </head>
   
   <body>
+
+
+<div style ="background-color : red;">
+<h1>
+  Hi There
+</h1>
+
+<h3>
+  Tell me about yourself
+</h3>
+
+
+</div>
 
 <form >
   First name:<br>
@@ -28,13 +41,21 @@
   Last name:<br>
   <input type="text" name="lastname" >
   <br>
+
+   <br>
+  
+  Nunber:<br>
+  <input type="number" name="Number" >
+  <br>
    EMAIL:<br>
   <input type="email" name="email" >
   <br>
   
   <br>
    About You:<br>
-  <input type="text" name="about" >
+
+  <textarea rows="4" cols="50">
+  </textarea>
   <br>
   <br>
   
@@ -47,6 +68,11 @@
   <input type="radio" name="type" value="Other"> Other
 </form> 
 
+
+<br>
+   Favorite Season:<br>
+
+
 <select>
   <option value="Spring">Spring</option>
   <option value="Summer">Summer</option>
@@ -56,8 +82,13 @@
 
 
 
+
+
 <input type="submit" value="Submit">
+
 
 </body>
 
+
+</div>
 </html>
