--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 </div>
 
+<div>
+
 <form >
   First name:<br>
   <input type="text" name="firstname" >
@@ -69,10 +71,20 @@
 </form> 
 
 
-<br>
-   Favorite Season:<br>
 
 
+
+</body>
+
+
+</div>
+
+<p>
+   Favorite Season:</p>
+
+
+<div>
+<div style="text-align: center">
 <select>
   <option value="Spring">Spring</option>
   <option value="Summer">Summer</option>
@@ -80,15 +92,12 @@
   <option value="Winter">Winter</option>
 </select>
 
-
-
-
-
-<input type="submit" value="Submit">
-
-
-</body>
-
-
 </div>
+<div style="text-align: center">
+
+<br>
+<br>
+<input type="submit" value="Submit">
+</div>
+
 </html>
