--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <div>
 
   <head>
+    
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta charset="utf-8">
@@ -37,26 +38,26 @@
 
 <form >
   First name:<br>
-  <input type="text" name="firstname" >
+  <input type="text" name="firstname" placeholder="Enter First Name" >
   <br>
   
   Last name:<br>
-  <input type="text" name="lastname" >
+  <input type="text" name="lastname" placeholder="Enter Lase Name" >
   <br>
 
    <br>
   
   Nunber:<br>
-  <input type="number" name="Number" >
+  <input type="number" name="Number" placeholder="Enter Phone Number"  >
   <br>
    EMAIL:<br>
-  <input type="email" name="email" >
+  <input type="email" name="email" placeholder="Enter Email" >
   <br>
   
   <br>
    About You:<br>
 
-  <textarea rows="4" cols="50">
+  <textarea rows="4" cols="50" placeholder="Tell me about yourself">
   </textarea>
   <br>
   <br>
@@ -64,10 +65,10 @@
 </form> 
 
 
- <form>
+ <form style="text-align: center; ">
   <input type="radio" name="type" value="Dog" checked> Male<br>
   <input type="radio" name="type" value="Cat"> Female<br>
-  <input type="radio" name="type" value="Other"> Other
+  <input type="radio" name="type" value="Other"> Other <br>
 </form> 
 
 
@@ -84,8 +85,8 @@
 
 
 <div>
-<div style="text-align: center">
-<select>
+<div style="text-align: center;">
+<select style="text-align: center;">
   <option value="Spring">Spring</option>
   <option value="Summer">Summer</option>
   <option value="Fall">Fall</option>
