--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div>
 
   <head>
-    
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta charset="utf-8">
@@ -54,6 +54,8 @@
   <input type="email" name="email" placeholder="Enter Email" >
   <br>
   
+
+
   <br>
    About You:<br>
 
@@ -64,21 +66,18 @@
   
 </form> 
 
-
- <form style="text-align: center; ">
-  <input type="radio" name="type" value="Dog" checked> Male<br>
-  <input type="radio" name="type" value="Cat"> Female<br>
-  <input type="radio" name="type" value="Other"> Other <br>
-</form> 
-
-
-
-
-
 </body>
 
 
 </div>
+
+
+ <form name=form style="width:auto;">
+<input type="radio" name=myradio value="1" >Dog
+<input type="radio" name=myradio value="2" checked>Cat
+<input type="radio" name=myradio value="3" >Other
+</form>
+
 
 <p>
    Favorite Season:</p>
@@ -100,5 +99,7 @@
 <br>
 <input type="submit" value="Submit">
 </div>
+
+
 
 </html>
