--- a/about.html
+++ b/about.html
@@ -35,38 +35,26 @@
   </div>
   
   </div>
-
-
-
-
-
-<IMG SRC="golf.jpg" width="100%" height="100%" style="position: relative;
-top: 0;
-left: 0;
-width: 100%;
-padding:0px"/>
-
-
+  
 
 <div class= "container5" >
 
-  <h1>School, Golf, Friends, and more Golf.</h1>
 
   <h3>
+    <br>
+    <br>
 
   I am currently a Computer Science major at
-  Gonzaga University.<br>
+  Gonzaga University. <br>Expected graduation in May 2019<br>
 
-  Some of the things I enjoy
-  are watching golf, XKCD, Christopher Nolan, and school.  
+  </h3>
   <br>
-   <br>
-    <br>
-     <br>
+  <br>
 </h3>
 
 
 <div style="margin-left: auto; margin-right: auto;  align-content: center; text-align: center;">
+
 
 </div>
   </div>
@@ -77,13 +65,39 @@ padding:0px"/>
   <br>
 </div>
 
+<h4>
+  Ytel, Inc
+</h5>
+<h6>
+Positions:
+</h6>
+<p style="color:black; text-align: left; padding-left:50px"> Operations / Level 3 Escalation <br>
+    Account Representative <br>
+    Sales Representative (former)<br>
+    <br>
+    <br>
+    Ytel is a full-service telephone carrier specializing in SaaS. Providing Contact Center solutions and Marketing platforms.
+<h6>
+  Duties Include:
+</h6>
+<p style="color:black; text-align: left; padding-left:50px">
+   Level 3 Escalation to resolve customer inquiries (after Level 1 and 2 are not able to resolve inquiry; Routinely developed technology work-arounds to meet customer needs.<br>
+ Direct customer notification of system failure, developed contingency/mitigation plans. <br>Network Fraud monitoring and shutdown.
+<br>
+<br>
+<br>
+
+
+
+
+
 <div class="flex-container7">
 
 
 <div class="flex-container6">
   <div style="text-align: center; object-fit:contain;">
 
-        <img src="ytel.jpeg" style="width:100px; height:60px; padding:0px">
+    <img src="ytel.jpeg" style="width:100px; height:60px; padding:0px">
 
   <p style="color: black; text-align: center; justify-content: center; ">
     Level 3 Escalation, Developer Contact
@@ -113,6 +127,7 @@ padding:0px"/>
 </div>
 </div>
 </div>
+
 
 
 
