--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>JavaScript Hello World Example</title>
-    <script src="index.js"></script>
-
-</head>
-<body>
-
-
- 
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title></title>
+        <script src="index.js"></script>
+  </head>
+  <body>
+    <!-- Body content goes here -->
+  </body>
 </html>
