--- a/assignment.html
+++ b/assignment.html
@@ -35,9 +35,9 @@
     <section class="dark-bg" id="three">
       <div class="inner-content">
         <p>3. Input text to add to the list below</p>
-        <input type="text">
-        <button>Submit</button>
-        <ul>
+        <input type="text" id="input">
+        <button onclick="addToList()"" id= "button2" >Submit</button>
+        <ul id = "list">
           <li>One</li>
           <li>Green</li>
         </ul>
