--- a/assignment.html
+++ b/assignment.html
@@ -47,10 +47,10 @@
       <div class="inner-content">
         <p>4. If an item is clicked, remove it from the list.</p>
         <ul>
-          <li>Bob</li>
-          <li>Tim</li>
-          <li>Jack</li>
-          <li>Sam</li>          
+          <li onclick="removeItem1()" id = 'bob'>Bob</li>
+          <li onclick="removeItem2()" id = 'tim'>Tim</li>
+          <li onclick="removeItem3()" id = 'jack'>Jack</li>
+          <li onclick="removeItem4()" id = 'sam'>Sam</li>          
         </ul>
       </div>
     </section>
