--- a/assignment.html
+++ b/assignment.html
@@ -60,10 +60,10 @@
         <p>This doesn't have to be pretty.</p>
         <p>Just change the background color of the selected item with a class.</p>
         <ul>
-          <li>Bob</li>
-          <li>Tim</li>
-          <li>Jack</li>
-          <li>Sam</li>          
+          <li onclick = "highlightItem1()" id = "bob1">Bob</li>
+          <li onclick = "highlightItem2()" id = "tim1">Tim</li>
+          <li onclick = "highlightItem3()" id = "jack1">Jack</li>
+          <li onclick = "highlightItem4()" id = "sam1">Sam</li>          
         </ul>
       </div>
     </section>
