--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <title>About Me</title>
     <link rel="sytlesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="form.js"></script>
+    <script>
 
+</script>
     </style>
   </head>
   
@@ -24,12 +27,9 @@
 
 <div style ="background-color : red;">
 <h1>
-  Hi There
+  Want to get in Touch?
 </h1>
 
-<h3>
-  Tell me about yourself
-</h3>
 
 
 </div>
@@ -38,28 +38,28 @@
 
 <form >
   First name:<br>
-  <input type="text" name="firstname" placeholder="Enter First Name" >
+  <input type="text" id = "firstname" name="firstname" placeholder="Enter First Name" >
   <br>
   
   Last name:<br>
-  <input type="text" name="lastname" placeholder="Enter Lase Name" >
+  <input type="text" id = "lastname" name="lastname" placeholder="Enter Lase Name" >
   <br>
 
    <br>
   
   Nunber:<br>
-  <input type="number" name="Number" placeholder="Enter Phone Number"  >
+  <input type="number" id = "number" name="number" placeholder="Enter Phone Number"  >
   <br>
    EMAIL:<br>
-  <input type="email" name="email" placeholder="Enter Email" >
+  <input type="email" id = "email" name="email" placeholder="Enter Email" >
   <br>
   
 
 
   <br>
-   About You:<br>
+   Message:<br>
 
-  <textarea rows="4" cols="50" placeholder="Tell me about yourself">
+  <textarea id = "message" rows="4" cols="50" placeholder="Tell me about yourself">
   </textarea>
   <br>
   <br>
@@ -72,33 +72,34 @@
 </div>
 
 
- <form name=form style="width:auto;">
-<input type="radio" name=myradio value="1" >Dog
-<input type="radio" name=myradio value="2" checked>Cat
-<input type="radio" name=myradio value="3" >Other
-</form>
-
-
-<p>
-   Favorite Season:</p>
-
-
-<div>
-<div style="text-align: center;">
-<select style="text-align: center;">
-  <option value="Spring">Spring</option>
-  <option value="Summer">Summer</option>
-  <option value="Fall">Fall</option>
-  <option value="Winter">Winter</option>
-</select>
 
 </div>
 <div style="text-align: center">
 
 <br>
 <br>
-<input type="submit" value="Submit">
+<input type="submit" id = "button" value="Submit" onClick = "submit()" >
 </div>
+
+
+
+
+
+<h2 id="newtext" style="text-align: center">
+
+</h2>
+
+<h3 id ="snumber" >
+	</h3>
+<h3 id = "semail" >
+</h3>
+
+<p id = "content">
+
+</p>
+
+
+
 
 
 
