--- a/map.html
+++ b/map.html
@@ -114,16 +114,22 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIKamQxnIGE7OkZv6sZAuIan4B-KmveFk&callback=initMap">
     </script>
 
+     <br>
+ <br>
+
     <ul id = "foodlist" >
     <li>
         <a href="http:theonion.biz">
-            <img src="onion.png" style = "background-color: black"></a>
+            <img src="onion.png" style = "background-color: black"> </a>
+            <h1 style = "color : black;"> The Onion is my favorite Burger/Beer Place</h1>
     </li>
     <li>
         <a href="http://deleonfoods.net"><img src="deleon.png" style = "background-color: black"></a>
+        <h1 style = "color : black;"> De Leon is the closest Spokane gets to Southern California mexican food </h1>
     </li>
     <li>
-        <a href="http://www.theflyinggoat.com/"><img src="goat.png"</a>
+        <a href="http://www.theflyinggoat.com/"><img src="goat.png">
+        <h1 style = "color : black;"> Great Pizza, bit of a drive from campus however </h1>
     </li>
     </ul>
   </body>
